--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -2,53 +2,50 @@
 # yaml-language-server: $schema=https://taskfile.dev/schema.json
 version: "3"
 
-vars:
-  TALHELPER_SECRET_FILE: "talsecret.sops.yaml"
-  TALHELPER_CONFIG_FILE: "talconfig.yaml"
-
-env:
-  TALOSCONFIG: "talosconfig"
-
 tasks:
   genconfig:
     desc: Generate the Talos configs
-    cmd: talhelper -c {{.CLUSTER_DIR}}/talos/{{.TALHELPER_CONFIG_FILE}} genconfig -s {{.CLUSTER_DIR}}/talos/{{.TALHELPER_SECRET_FILE}} -o {{.CLUSTER_DIR}}/talos/clusterconfig
+    cmd: talhelper -c {{.CLUSTER_DIR}}/talos/talconfig.yaml genconfig -s {{.CLUSTER_DIR}}/talos/talsecret.sops.yaml -o {{.CLUSTER_DIR}}/talos/clusterconfig
+    requires:
+      vars: [CLUSTER]
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
-      - { msg: "Missing talhelper secret file", sh: "test -f {{.CLUSTER_DIR}}/talos/{{.TALHELPER_SECRET_FILE}}" }
+      - test -f {{.CLUSTER_DIR}}/talos/talconfig.yaml
+      - test -f {{.CLUSTER_DIR}}/talos/talsecret.sops.yaml
 
-  node-config-apply:
-    desc: Apply the Talos config on a single node for an existing cluster
-    vars:
-      MODE: '{{.MODE | default "no-reboot"}}'
+  apply-node:
+    desc: Apply Talos config to a node [CLUSTER=main] [HOSTNAME=required]
+    dotenv: ['{{.CLUSTER_DIR}}/cluster.env']
+    cmds:
+      - task: down
+      - talosctl apply-config --nodes {{.HOSTNAME}} --file {{.CLUSTER_DIR}}/talos/clusterconfig/{{.CLUSTER}}-{{.HOSTNAME}}.yaml
+      - talosctl --nodes {{.HOSTNAME}} health --wait-timeout=10m --server=false
+      - task: up
     requires:
       vars: [CLUSTER, HOSTNAME]
-    cmds:
-      - '{{if eq .MODE "reboot"}}kubectl drain {{.HOSTNAME}} --ignore-daemonsets --delete-emptydir-data --force{{end}}'
-      - talosctl apply-config --talosconfig={{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig --mode={{.MODE}} --nodes {{.HOSTNAME}} --file {{.CLUSTER_DIR}}/talos/clusterconfig/{{.CLUSTER}}-{{.HOSTNAME}}.yaml
-      - talosctl --nodes {{.HOSTNAME}} health --wait-timeout=10m --server=false
-      - '{{if eq .MODE "reboot"}}kubectl uncordon {{.HOSTNAME}}{{end}}'
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
-      - { msg: "Argument (hostname) is required", sh: "test -n {{.HOSTNAME}}" }
-      - { msg: "Argument (mode) is required", sh: "test -n {{.MODE}}" }
+      - talosctl --nodes {{.HOSTNAME}} get machineconfig
+      - test -f {{.CLUSTER_DIR}}/cluster.env
+      - test -f {{.CLUSTER_DIR}}/talos/talconfig.yaml
+      - test -f {{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig
 
-  cluster-config-apply:
-    desc: Apply the Talos config on all nodes for an existing cluster
+  apply-cluster: ## This isn't working on utility cluster
+    desc: Apply the Talos config on all nodes for an existing cluster [CLUSTER=main]
     vars:
-      HOSTNAME:
-        sh: |-
-          kubectl get nodes --output=jsonpath='{.items[*].metadata.name}'
-      MODE: '{{.MODE | default "no-reboot"}}'
+      HOSTNAMES:
+        sh: kubectl get nodes --output=jsonpath='{.items[*].metadata.name}'
     cmds:
-      - for: { var: HOSTNAME }
-        task: node-config-apply
+      - for: { var: HOSTNAMES }
+        task:  apply-node
         vars:
           HOSTNAME: '{{.ITEM}}'
-          MODE: "{{.MODE}}"
+          CLUSTER: "{{.CLUSTER}}"
+    requires:
+      vars: [CLUSTER]
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
-      - { msg: "Missing talhelper config file", sh: "test -f {{.CLUSTER_DIR}}/talos/{{.TALHELPER_CONFIG_FILE}}" }
+      - talosctl config info
+      - test -f {{.CLUSTER_DIR}}/cluster.env
+      - test -f {{.CLUSTER_DIR}}/talos/talconfig.yaml
+      - test -f {{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig
 
   soft-nuke:
     desc: Resets nodes back to maintenance mode so you can re-deploy again straight after
@@ -64,34 +61,33 @@ tasks:
     preconditions:
       - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
 
-  node-reboot:
-    desc: Reboot individual Talos nodes.
+  reboot-node:
+    desc: Reboot Talos on a single node [CLUSTER=main] [HOSTNAME=required]
+    cmds:
+      - task: down
+      - talosctl --nodes {{.HOSTNAME}} reboot
+      - talosctl --nodes {{.HOSTNAME}} health --wait-timeout=10m --server=false
+      - task: up
     requires:
       vars: [CLUSTER, HOSTNAME]
-    cmds:
-      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
-      - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
-      - kubectl drain {{.HOSTNAME}} --ignore-daemonsets --delete-emptydir-data --force
-      - talosctl reboot --nodes {{.ITEM}} --context {{.CLUSTER}}
-      - talosctl --nodes {{.HOSTNAME}} health --wait-timeout=10m --server=false
-      - kubectl uncordon {{.HOSTNAME}}
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
-      - { msg: "Argument (HOSTNAME) is required", sh: "test -n {{.HOSTNAME}}" }
-      - { msg: "Argument (MODE) is required", sh: "test -n {{.MODE}}" }
+      - talosctl --nodes {{.HOSTNAME}} get machineconfig
+      - talosctl config info
+      - test -f {{.CLUSTER_DIR}}/cluster.env
+      - test -f {{.CLUSTER_DIR}}/talos/talconfig.yaml
+      - which talosctl
 
-  cluster-reboot:
-    desc: Reboot all Talos nodes.
+  reboot-cluster:
+    desc: Reboot Talos across the whole cluster [CLUSTER=main]
     prompt: This will reboot all of the cluster nodes. Are you sure you want to continue?
     requires:
       vars: [CLUSTER]
     vars:
       HOSTNAMES:
-        sh: |-
-          kubectl get nodes --output=jsonpath='{.items[*].metadata.name}'
+        sh: kubectl get nodes --output=jsonpath='{.items[*].metadata.name}'
     cmds:
       - for: { var: HOSTNAMES }
-        task: node-reboot
+        task: reboot-node
         vars:
           HOSTNAME: '{{.ITEM}}'
           CLUSTER: "{{.CLUSTER}}"
@@ -99,33 +95,56 @@ tasks:
         vars:
           CLUSTER: "{{.CLUSTER}}"
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
+      - talosctl config info
+      - test -f {{.CLUSTER_DIR}}/cluster.env
+      - test -f {{.CLUSTER_DIR}}/talos/talconfig.yaml
+      - test -f {{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig
 
-  node-shutdown:
-    desc: Shutdown individual Talos nodes.
-    requires:
-      vars: [CLUSTER, HOSTNAME]
-    cmds:
-      - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
-      - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
-      - kubectl drain {{.HOSTNAME}} --ignore-daemonsets --delete-emptydir-data --force
-      - talosctl shutdown --wait=false -n {{.ITEM}} --context {{.CLUSTER}}
-    preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
-      - { msg: "Argument (HOSTNAME) is required", sh: "test -n {{.HOSTNAME}}" }
-
-  cluster-shutdown:
-    desc: Shutdown all Talos nodes.
-    prompt: This will shutdown all of the cluster nodes. Are you sure you want to continue?
+  shutdown-cluster:
+    desc: Shutdown Talos across the whole cluster [CLUSTER=main]
+    prompt: Shutdown the Talos cluster '{{.CLUSTER}}' ... continue?
+    cmd: talosctl shutdown --nodes {{.HOSTNAMES}} --force
     vars:
       HOSTNAMES:
-        sh: |-
-          kubectl get nodes --output=jsonpath='{.items[*].metadata.name}'
-    cmds:
-      - for: { var: HOSTNAMES }
-        task: node-shutdown
-        vars:
-          HOSTNAME: '{{.ITEM}}'
-          CLUSTER: "{{.CLUSTER}}"
+        sh: kubectl get nodes --output=jsonpath='{.items[*].metadata.name}'
+    requires:
+      vars: [CLUSTER]
     preconditions:
-      - { msg: "Argument (CLUSTER) is required", sh: "test -n {{.CLUSTER}}" }
+      - talosctl --nodes {{.NODES}} get machineconfig
+      - talosctl config info
+      - test -f {{.CLUSTER_DIR}}/talos/talconfig.yaml
+      - test -f {{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig
+      - which talosctl
+
+  kubeconfig:
+    desc: Generate the kubeconfig for a Talos cluster [CLUSTER=main]
+    cmd: talosctl kubeconfig --nodes {{.TALOS_CONTROLLER}} --force --force-context-name {{.CLUSTER}} {{.CLUSTER_DIR}}
+    vars:
+      TALOS_CONTROLLER:
+        sh: talosctl config info --output json | jq --raw-output '.endpoints[]' | shuf -n 1
+    requires:
+      vars: [CLUSTER]
+    preconditions:
+      - talosctl config info
+      - test -f {{.CLUSTER_DIR}}/talos/clusterconfig/talosconfig
+      - which talosctl
+
+  down:
+    internal: true
+    cmds:
+      - flux --namespace flux-system suspend kustomization --all
+      - '{{if eq .CLUSTER "main"}}until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done{{end}}'
+      - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
+      - task: :volsync:state-suspend
+    preconditions:
+      - which flux kubectl
+
+  up:
+    internal: true
+    cmds:
+      - flux --namespace flux-system resume kustomization --all
+      - '{{if eq .CLUSTER "main"}}until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done{{end}}'
+      - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
+      - task: :volsync:state-resume
+    preconditions:
+      - which flux kubectl
