fix(task): clean up op cli preconditions

--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -109,5 +109,4 @@ tasks:
     requires:
       vars: [CLUSTER]
     preconditions:
-      - op user get --me
-      - which curl flux kubectl ls op
+      - which curl flux kubectl ls bws
