feat: add comment to template

--- a/kubernetes/shared/templates/volsync/minio.yaml
+++ b/kubernetes/shared/templates/volsync/minio.yaml
@@ -40,7 +40,7 @@ spec:
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-10Gi}"
     storageClassName: "${VOLSYNC_STORAGECLASS:-placeholder}"
-    accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"]
+    accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
     capacity: "${VOLSYNC_CAPACITY:-2Gi}"
     moverSecurityContext:
       runAsUser: ${VOLSYNC_PUID:-568}
