feat(volsync): update settings

--- a/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
+++ b/kubernetes/main/apps/downloads/qbittorrent/ks.yaml
@@ -24,6 +24,7 @@ spec:
     substitute:
       APP: *app
       VOLSYNC_ACCESSMODES: ReadWriteMany
+      VOLSYNC_RSDT_ACCESSMODES: ReadOnlyMany
       PVC_VOLSYNC_STORAGECLASS: ceph-filesystem
       VOLSYNC_STORAGECLASS: ceph-filesystem
       VOLSYNC_SNAPSHOTCLASS: csi-ceph-filesystem
