--- a/kubernetes/utility/flux/settings/cluster-settings.yaml
+++ b/kubernetes/utility/flux/settings/cluster-settings.yaml
@@ -12,3 +12,5 @@ data:
   VOLSYNC_SNAPSHOTCLASS: longhorn-snapclass
   VOLSYNC_CACHE_SNAPSHOTCLASS: longhorn-cache
   VOLSYNC_STORAGECLASS: longhorn-snapshot
+  VOLSYNC_MINIO_SCHEDULE: "30"
+  VOLSYNC_R2_SCHEDULE: "45"
