--- a/kubernetes/shared/templates/volsync/r2.yaml
+++ b/kubernetes/shared/templates/volsync/r2.yaml
@@ -31,7 +31,7 @@ metadata:
 spec:
   sourcePVC: "${CLAIM:-${APP}}"
   trigger:
-    schedule: "15 0 * * *"
+    schedule: "${VOLSYNC_R2_SCHEDULE:-15} * * * *"
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 7
@@ -41,7 +41,7 @@ spec:
     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-placeholder}"
     cacheAccessModes: ["${VOLSYNC_CACHE_ACCESSMODES:-ReadWriteOnce}"]
     storageClassName: "${VOLSYNC_STORAGECLASS:-placeholder}"
-    accessModes: ["${VOLSYNC_ACCESSMODES:-ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
+    accessModes: ["${VOLSYNC_RSDT_ACCESSMODES:-ReadWriteOnce}"] # Use ReadOnlyMany for CephFS
     moverSecurityContext:
       runAsUser: ${VOLSYNC_PUID:-568}
       runAsGroup: ${VOLSYNC_PGID:-568}
