feat(nfs): change mount dir

--- a/kubernetes/main/flux/settings/cluster-secrets.sops.yaml
+++ b/kubernetes/main/flux/settings/cluster-secrets.sops.yaml
@@ -16,10 +16,10 @@ stringData:
     SVC_MINECRAFT_ADDR: ENC[AES256_GCM,data:f12BWnkvCdvjNg==,iv:gHfGEfHHQY9Rbu0uDls0sLdkje7UIQ4Mp+l5n33BJBA=,tag:NUo6kfMNYZQY9gRqZZN36g==,type:str]
     SVC_COREKEEPER_ADDR: ENC[AES256_GCM,data:fA4djsP75bTYlA==,iv:Kipkmlx+4AEkjmSjCdLKxSRRViAp0AP8SYgcyQImC0s=,tag:o7yurCyzgSHSnGmCHqZmAg==,type:str]
     #ENC[AES256_GCM,data:NYqIEJwguAGYzknS,iv:U0oZbqHMObZ+Wvx8ryQE8dlR0SG26wsfYV3F2F67H+w=,tag:oCJYngN4jrdWrQug82W9vQ==,type:comment]
-    SECRET_NFS_DATA: ENC[AES256_GCM,data:RN+iTilzovBvmzeKmn8=,iv:9HOHKMlvI1tPJ0akJGHMYqrmhBWpHCthyhJEXuK/olk=,tag:NN30dHlw4WQVqulXe0/TUg==,type:str]
-    SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:IjrRY8AXUBwvNUwl+2VK,iv:nlhXrqMAJ7Valrz8gheC7ZcznJTfNrnHS4uy75z/IC0=,tag:n0y2C1V9YpMNoHlcKNFuqQ==,type:str]
-    SECRET_NFS_VOLSYNC: ENC[AES256_GCM,data:70s24/HdVnkvSrWHO2ofAstaDnaYbU/XCMssdg==,iv:4VoWUxB0m3PkR/hqmSzC2ThBOBZ/ECXu5ZbrmeO1jGI=,tag:/DZ4CFioDujyCuwsv1YSTg==,type:str]
-    SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:R35ymWjSAis2bvyU7aGN2K7xn5o9gMkD79vowWc=,iv:9ZQbMkqiklGYrk5pqkUiAKHuKCS28JgWynPBqFx1zbE=,tag:oicthoWKNN+mRo6H7VD6QA==,type:str]
+    SECRET_NFS_DATA: ENC[AES256_GCM,data:JLcg52dMoePDlyQnA8ZeSccLVQ==,iv:IQFJv4fu/5ToHSIN5HsC+wr7WmTXvh5QVURwnNYiA4Q=,tag:U7ougHg+u5kQrmgvj3z1UQ==,type:str]
+    SECRET_NFS_PAPERLESS: ENC[AES256_GCM,data:zAriBZQWfFLHarrMJFNAn1zIFJ4=,iv:W//f4b//UhzehpJv/9ByNj1O8x9WIiDud9tKJgRoG9Q=,tag:v8DQCTXJEl/lIQrW820yjw==,type:str]
+    SECRET_NFS_VOLSYNC: ENC[AES256_GCM,data:pteLibsq8PVS4IaI7x9dnY+H+ZE5lUN5kazotYn+wLHW,iv:gZDW0a0E3uWEPg2b/24LpMUh/aiA+A3g1qh68wiurzM=,tag:HGwnKVDu341u4uTcieVnxg==,type:str]
+    SECRET_NFS_POSTGRES: ENC[AES256_GCM,data:TvsVDnGvsXp//W0Ed9hYzMiIOiUubattV3CX2YHxC7Xu/A==,iv:QjsvEqZC7yQ31kt3ttDZysxsYqKQDhJDcMOAOTMI4+c=,tag:5w4Rc8gR8KjP+T1Qo5hQhw==,type:str]
     LATITUDE: ENC[AES256_GCM,data:+SFXV7JnoT1xX/1auwG7RA==,iv:Ojw+S3gtVIHN15uAveGVUsHFFfQogmx2uC0YcxNx+kM=,tag:l7m+O3NCMoqJCMVUgNz2Bw==,type:str]
     LONGITUDE: ENC[AES256_GCM,data:5JWin8qaaJh32nnHANsRsvs=,iv:jsepB8x8q/R97Be5ZxXpHGqUFuUaEv9r36CT4MaZSZs=,tag:/TeYa7lzjrksVuKLZw3mCA==,type:str]
 sops:
@@ -37,8 +37,8 @@ sops:
             Mml3TDJwa2tWTUV3d0piVTFJSFhhOEEKr0FLybpRsnIlbT55No+/qolp2GVAB1yD
             yeGYjULaarqScUazhWSnuzDcRj4X0MX8UDV5lc4OsGba9ymVbywDbQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-11-12T16:42:57Z"
-    mac: ENC[AES256_GCM,data:HHgkeHhkTITS6ZpWBDyQKnrssSDpPuzgo3TVZ7Fo7ok6Y9qRN8HPWAENvtHbyNfayMQde0cgj32xAgseYehEs2sjBTLYPj8h0YHXbba7YAFmWcqlASxnzWDtwiwLqTj/IKo/1gEZNagifFzHItqjDUrP/E1YlG3dcs9fg8NPxi4=,iv:/rJaJNOgQreAfLaFHR+A6qFIcQcRHHESt+eyj2xYOBo=,tag:d7LYAnAEUVJ2cyrycyGXPQ==,type:str]
+    lastmodified: "2024-11-19T16:25:56Z"
+    mac: ENC[AES256_GCM,data:LZWRgX3VIdm0C5UbI3AB1OTnsdyck+sg2rx6JB+RgOXPfRuC8SoSACzsfMUOVYKcMFlGgV8H72LdY4cPiDRRyG1/ISeJTTz0Kc6slzwGhqywJsHjvYedb0J7uvJMp1r7uoCZi+iA33qr9JPip9GsyJQFVaXKWYe+EZwxfTF3Ynk=,iv:cmvO3ozgejXBAHIOZYY/YTLQ5Ahan3calaEUAJ3mHpY=,tag:RytfLIYauU7B/FO1mSPtcQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.9.1
