feat(talos): enable forwardKubeDNSToHost now hostLegacyRouting is enabled

--- a/kubernetes/main/apps/kube-system/cilium/app/helm-values.yaml
+++ b/kubernetes/main/apps/kube-system/cilium/app/helm-values.yaml
@@ -1,10 +1,11 @@
 ---
 autoDirectNodeRoutes: true
 bandwidthManager:
-  enabled: true
+  enabled: false
   bbr: true
 bpf:
-  masquerade: false
+  hostLegacyRouting: true
+  masquerade: true
   tproxy: true
 cgroup:
   automount:
