--- a/kubernetes/utility/apps/network/headscale/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/externalsecret.yaml
@@ -53,6 +53,8 @@ spec:
             search_domains: []
           log:
             level: info
+          policy:
+            path: /etc/headscale/policy.json
           oidc:
             only_start_if_oidc_is_available: true
             issuer: https://sso.${SECRET_DOMAIN}/application/o/headscale/
