fix(hs): update policy

--- a/kubernetes/utility/apps/network/headscale/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/headscale/app/externalsecret.yaml
@@ -66,12 +66,18 @@ spec:
             strip_email_domain: true
         policy.json: |
           {
+            "groups" : {
+              "group:k8s": ["kubernetes"],
+              "group:admin": ["vetrius"]
+            },
             "tagOwners": {
-              "tag:k8s": ["kubernetes"],
+              "tag:k8s": ["group:k8s"],
+              "tag:vet": ["group:admin"]
             },
             "autoApprovers": {
               "routes": {
-                "10.69.1.0/22": ["tag:k8s"],
+                "${NODE_CIDR}": ["tag:k8s"],
+                "${TRUSTED_LVAN}": ["tag:k8s"],
               },
               "exitNode": ["tag:k8s"],
             }
