feat: migrate eso

--- a/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
@@ -4,11 +4,9 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: &name kometa-secret
-spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
