--- a/kubernetes/main/apps/media/plex/movie-roulette/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/movie-roulette/externalsecret.yaml
@@ -6,9 +6,8 @@ metadata:
   name: &name movie-roulette-secret
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
