--- a/kubernetes/utility/apps/self-hosted/free-game-notifier/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/self-hosted/free-game-notifier/app/externalsecret.yaml
@@ -6,12 +6,14 @@ metadata:
   name: &name free-game-notifier
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
-  data:
-  - secretKey: DISCORD_WEBHOOK
-    remoteRef:
+    template:
+      engineVersion: v2
+      data:
+        DISCORD_WEBHOOK: '{{ .DISCORD_WEBHOOK }}'
+  dataFrom:
+  - extract:
       key: free-games
