--- a/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set-controller/app/externalsecret.yaml
+++ b/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set-controller/app/externalsecret.yaml
@@ -6,12 +6,15 @@ metadata:
   name: &name actions-runner-controller-auth-secret
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
-  data:
-  - secretKey: github_token
-    remoteRef:
-      key: actions-runner-controller
+    template:
+      engineVersion: v2
+      data:
+        ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN: |-
+          {{ .ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN }}
+  dataFrom:
+    - extract:
+        key: actions-runner-controller
