--- a/kubernetes/main/apps/cert-manager/cert-manager/issuers/externalsecret.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/issuers/externalsecret.yaml
@@ -6,9 +6,8 @@ metadata:
   name: &name cloudflare-secret
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
@@ -16,5 +15,5 @@ spec:
       data:
         CLOUDFLARE_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
   dataFrom:
-  - extract:
-      key: cloudflare
+    - extract:
+        key: cloudflare
