--- a/kubernetes/main/apps/downloads/recyclarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/app/externalsecret.yaml
@@ -5,9 +5,8 @@ metadata:
   name: &name recyclarr-secret
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
