--- a/kubernetes/main/apps/flux-system/weave-gitops/app/externalsecret.yaml
+++ b/kubernetes/main/apps/flux-system/weave-gitops/app/externalsecret.yaml
@@ -6,9 +6,8 @@ metadata:
   name: &name cluster-user-auth
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
@@ -20,30 +19,3 @@ spec:
   dataFrom:
   - extract:
       key: weave-gitops
-# ---
-# # yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/externalsecret_v1beta1.json
-# apiVersion: external-secrets.io/v1beta1
-# kind: ExternalSecret
-# metadata:
-#   name: &name oidc-auth
-# spec:
-#   secretStoreRef:
-#     name: bitwarden-secrets-manager
-#     kind: ClusterSecretStore
-#   refreshInterval: 15m
-#   target:
-#     name: *name
-#     template:
-#       engineVersion: v2
-#       data:
-#         # Authentik
-#         clientID: "{{ .GITOPS_CLIENT_ID }}"
-#         clientSecret: "{{ .GITOPS_CLIENT_SECRET }}"
-#         issuerURL: https://sso.${SECRET_DOMAIN}/application/o/gitops/
-#         redirectURL: https://gitops.${SECRET_DOMAIN}/oauth2/callback
-#         customScopes: openid,profile,email
-#         claimGroups: groups
-#         claimUsername: preferred_username
-#   dataFrom:
-#   - extract:
-#       key: weave-gitops
