--- a/kubernetes/main/apps/security/authentik/app/externalsecret.yaml
+++ b/kubernetes/main/apps/security/authentik/app/externalsecret.yaml
@@ -6,9 +6,8 @@ metadata:
   name: &name authentik-secret
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
