--- a/kubernetes/utility/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
+++ b/kubernetes/utility/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
@@ -3,41 +3,16 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: bitwarden-secrets-manager
-spec:
-  refreshInterval: 15
-  provider:
-    webhook:
-      url: "http://bws-cache.${SECRET_DOMAIN}/key/{{ .remoteRef.key }}"
-      headers:
-        Authorization: "Bearer {{ print .serviceaccount.token }}"
-      result:
-        jsonPath: "$.value"
-      secrets:
-      - name: serviceaccount
-        secretRef:
-          name: bitwarden-access-token
-          key: token
-          namespace: external-secrets
----
-# yaml-language-server: $schema=https://kube-schemas.pages.dev/external-secrets.io/clustersecretstore_v1beta1.json
-apiVersion: external-secrets.io/v1beta1
-kind: ClusterSecretStore
-metadata:
-  name: bitwarden-secrets-manager-sdk
-# TODO: better way to inject caBundle
-#  annotations:
-#    cert-manager.io/inject-ca-from: external-secrets/bitwarden-tls-certs
+  name: onepassword-connect
 spec:
   provider:
-    bitwardensecretsmanager:
-      bitwardenServerSDKURL: https://bitwarden-sdk-server.external-secrets.svc.cluster.local:9998
+    onepassword:
+      connectHost: http://onepassword-connect.external-secrets.svc.cluster.local
+      vaults:
+        Kubernetes: 1
       auth:
         secretRef:
-          credentials:
+          connectTokenSecretRef:
+            name: onepassword-connect-secret
             key: token
-            name: bitwarden-access-token
             namespace: external-secrets
-      organizationID: ${BITWARDEN_ORG}
-      projectID: ${BITWARDEN_PROJ}
-      caBundle: ${BITWARDEN_CABUNDLE}
