--- a/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/flux-system/tofu-controller/app/externalsecret.yaml
@@ -6,9 +6,8 @@ metadata:
   name: &name terraform-backend-secret
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: *name
     template:
