--- a/kubernetes/main/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
+++ b/kubernetes/main/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
@@ -3,19 +3,16 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: bitwarden-secrets-manager
+  name: onepassword-connect
 spec:
-  refreshInterval: 15
   provider:
-    webhook:
-      url: "http://bws-cache.${SECRET_DOMAIN}/key/{{ .remoteRef.key }}"
-      headers:
-        Authorization: "Bearer {{ print .serviceaccount.token }}"
-      result:
-        jsonPath: "$.value"
-      secrets:
-      - name: serviceaccount
+    onepassword:
+      connectHost: http://onepassword-connect.external-secrets.svc.cluster.local
+      vaults:
+        Kubernetes: 1
+      auth:
         secretRef:
-          name: bitwarden-access-token
-          key: token
-          namespace: external-secrets
+          connectTokenSecretRef:
+            name: onepassword-connect-secret
+            key: token
+            namespace: external-secrets
