Revert "feat: deploy 1pass-connect (#3229)"
This reverts commit f14fae2f4f783be5f50e9bcd527ba9eec085a87e.

--- a/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
+++ b/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set/app/helmrelease.yaml
@@ -26,10 +26,10 @@ spec:
     - name: gha-runner-scale-set-controller
       namespace: actions-runner-system
   valuesFrom:
-    - targetPath: githubConfigSecret.github_token
-      kind: Secret
-      name: actions-runner-controller-auth
-      valuesKey: ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN
+    - kind: Secret
+      name: actions-runner-controller-auth-secret
+      valuesKey: github_token
+      targetPath: githubConfigSecret.github_token
   values:
     nameOverride: gha-runner-scale-set
     runnerScaleSetName: gha-runner-scale-set
