--- a/kubernetes/main/apps/cert-manager/cert-manager/issuers/externalsecret.yaml
+++ b/kubernetes/main/apps/cert-manager/cert-manager/issuers/externalsecret.yaml
@@ -6,8 +6,9 @@ metadata:
   name: &name cloudflare-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
@@ -15,5 +16,5 @@ spec:
       data:
         CLOUDFLARE_API_KEY: "{{ .CLOUDFLARE_API_KEY }}"
   dataFrom:
-    - extract:
-        key: cloudflare
+  - extract:
+      key: cloudflare
