--- a/kubernetes/main/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
+++ b/kubernetes/main/apps/external-secrets/external-secrets/stores/clustersecretstore.yaml
@@ -3,16 +3,19 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: onepassword-connect
+  name: bitwarden-secrets-manager
 spec:
+  refreshInterval: 15
   provider:
-    onepassword:
-      connectHost: http://onepassword-connect.external-secrets.svc.cluster.local
-      vaults:
-        Kubernetes: 1
-      auth:
+    webhook:
+      url: "http://bws-cache.${SECRET_DOMAIN}/key/{{ .remoteRef.key }}"
+      headers:
+        Authorization: "Bearer {{ print .serviceaccount.token }}"
+      result:
+        jsonPath: "$.value"
+      secrets:
+      - name: serviceaccount
         secretRef:
-          connectTokenSecretRef:
-            name: onepassword-connect-secret
-            key: token
-            namespace: external-secrets
+          name: bitwarden-access-token
+          key: token
+          namespace: external-secrets
