--- a/kubernetes/utility/apps/self-hosted/free-game-notifier/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/self-hosted/free-game-notifier/app/externalsecret.yaml
@@ -6,14 +6,12 @@ metadata:
   name: &name free-game-notifier
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
-    template:
-      engineVersion: v2
-      data:
-        DISCORD_WEBHOOK: '{{ .DISCORD_WEBHOOK }}'
-  dataFrom:
-  - extract:
+  data:
+  - secretKey: DISCORD_WEBHOOK
+    remoteRef:
       key: free-games
