--- a/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set-controller/app/externalsecret.yaml
+++ b/kubernetes/main/apps/actions-runner-system/gha-runner-scale-set-controller/app/externalsecret.yaml
@@ -6,15 +6,12 @@ metadata:
   name: &name actions-runner-controller-auth-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
-    template:
-      engineVersion: v2
-      data:
-        ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN: |-
-          {{ .ACTION_RUNNER_CONTROLLER_GITHUB_TOKEN }}
-  dataFrom:
-    - extract:
-        key: actions-runner-controller
+  data:
+  - secretKey: github_token
+    remoteRef:
+      key: actions-runner-controller
