--- a/kubernetes/main/apps/downloads/recyclarr/app/externalsecret.yaml
+++ b/kubernetes/main/apps/downloads/recyclarr/app/externalsecret.yaml
@@ -5,8 +5,9 @@ metadata:
   name: &name recyclarr-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
