--- a/kubernetes/main/apps/flux-system/addons/webhooks/github/externalsecret.yaml
+++ b/kubernetes/main/apps/flux-system/addons/webhooks/github/externalsecret.yaml
@@ -6,8 +6,9 @@ metadata:
   name: &name github-webhook-token-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
