--- a/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
@@ -4,9 +4,11 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: &name kometa-secret
+spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
