--- a/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/homepage/app/externalsecret.yaml
@@ -6,8 +6,9 @@ metadata:
   name: &name homepage-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
@@ -17,6 +18,8 @@ spec:
         HOMEPAGE_VAR_CLOUDFLARED_ACCOUNTID: "{{ .CLOUDFLARE_ACCOUNT_TAG }}"
         HOMEPAGE_VAR_CLOUDFLARED_TUNNELID: "${CLOUDFLARE_TUNNEL_ID}"
         HOMEPAGE_VAR_CLOUDFLARED_API_TOKEN: "{{ .CLOUDFLARE_API_KEY }}"
+        HOMEPAGE_VAR_NEXTDNS_ID: "{{ .NEXTDNS_ID }}"
+        HOMEPAGE_VAR_NEXTDNS_API: "{{ .NEXTDNS_API }}"
         HOMEPAGE_VAR_PORTAINER_TOKEN: "{{ .PORTAINER_TOKEN }}"
         HOMEPAGE_VAR_UNIFI_USERNAME: "{{ .HOMEPAGE_UNIFI_USER }}"
         HOMEPAGE_VAR_UNIFI_PASSWORD: "{{ .HOMEPAGE_UNIFI_PASS }}"
@@ -74,6 +77,8 @@ spec:
       key: lubelog
   - extract:
       key: mylar
+  - extract:
+      key: nextdns
   - extract:
       key: overseerr
   - extract:
