--- a/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
+++ b/kubernetes/main/apps/self-hosted/paperless/app/externalsecret.yaml
@@ -6,8 +6,9 @@ metadata:
   name: &name paperless-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
