--- a/kubernetes/utility/apps/network/cloudflare-ddns/app/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/cloudflare-ddns/app/externalsecret.yaml
@@ -6,8 +6,9 @@ metadata:
   name: &name cloudflare-ddns-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
