--- a/kubernetes/utility/apps/network/external-dns/unifi/externalsecret.yaml
+++ b/kubernetes/utility/apps/network/external-dns/unifi/externalsecret.yaml
@@ -6,8 +6,9 @@ metadata:
   name: &name external-dns-unifi-secret
 spec:
   secretStoreRef:
+    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-    name: onepassword-connect
+  refreshInterval: 15m
   target:
     name: *name
     template:
