--- a/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
@@ -10,6 +10,7 @@ metadata:
   target:
     name: *name
     template:
+      engineVersion: v2
       data:
         KOMETA_MDBLIST_API_KEY: "{{ .MDBLIST_API_KEY }}"
         KOMETA_MYANIMELIST_ACCESS_TOKEN: "{{ .MYANIMELIST_ACCESS_TOKEN }}"
