--- a/kubernetes/shared/templates/volsync/r2.yaml
+++ b/kubernetes/shared/templates/volsync/r2.yaml
@@ -6,9 +6,8 @@ metadata:
   name: "${APP}-volsync-r2"
 spec:
   secretStoreRef:
-    name: bitwarden-secrets-manager
     kind: ClusterSecretStore
-  refreshInterval: 15m
+    name: onepassword-connect
   target:
     name: "${APP}-volsync-r2"
     template:
