--- a/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
+++ b/kubernetes/main/apps/media/plex/kometa/externalsecret.yaml
@@ -4,6 +4,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: &name kometa-secret
+spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
