feat: migrate terraform from BW to 1pass

--- a/.github/workflows/terraform-diff.yaml
+++ b/.github/workflows/terraform-diff.yaml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   changed-terraform:
     name: Changed Terraform
-    runs-on: ubuntu-latest
+    runs-on: ["gha-runner-scale-set"]
     outputs:
       matrix: ${{ steps.changed-terraform.outputs.all_changed_and_modified_files }}
     steps:
