feat(gha): update workflows

--- a/.github/workflows/flux-diff.yaml
+++ b/.github/workflows/flux-diff.yaml
@@ -19,12 +19,13 @@ jobs:
       matrix: ${{ steps.changed-clusters.outputs.all_changed_and_modified_files }}
     steps:
       - name: Get Secrets
-        uses: bitwarden/sm-action@v2
+        uses: 1password/load-secrets-action@v2
         with:
-          access_token: ${{ secrets.BW_ACCESS_TOKEN }}
-          secrets: |
-            e062dcb9-8cd7-471e-b9be-b10100497102 > BOT_APP_ID
-            5856238d-3fae-4a0f-9847-b1010049f697 > BOT_APP_PRIVATE_KEY
+          export-env: true
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.ONEPASS_SA_TOKEN }}
+          BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
+          BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
 
       - name: Generate Token
         uses: actions/create-github-app-token@v1
@@ -66,12 +67,13 @@ jobs:
       fail-fast: false
     steps:
       - name: Get Secrets
-        uses: bitwarden/sm-action@v2
+        uses: 1password/load-secrets-action@v2
         with:
-          access_token: ${{ secrets.BW_ACCESS_TOKEN }}
-          secrets: |
-            e062dcb9-8cd7-471e-b9be-b10100497102 > BOT_APP_ID
-            5856238d-3fae-4a0f-9847-b1010049f697 > BOT_APP_PRIVATE_KEY
+          export-env: true
+        env:
+          OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.ONEPASS_SA_TOKEN }}
+          BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
+          BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
 
       - name: Generate Token
         uses: actions/create-github-app-token@v1
