--- a/.github/workflows/bulk-merge-prs.yaml
+++ b/.github/workflows/bulk-merge-prs.yaml
@@ -20,13 +20,14 @@
       runs-on: ubuntu-latest
       steps:
         - name: Get Secrets
-          uses: bitwarden/sm-action@v2
+          uses: 1password/load-secrets-action@v2
           with:
-            access_token: ${{ secrets.BW_ACCESS_TOKEN }}
-            secrets: |
-              e062dcb9-8cd7-471e-b9be-b10100497102 > BOT_APP_ID
-              5856238d-3fae-4a0f-9847-b1010049f697 > BOT_APP_PRIVATE_KEY
-              33fe0505-5ef3-4d91-8053-b101004a4947 > BOT_USERNAME
+            export-env: true
+          env:
+            OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.ONEPASS_SA_TOKEN }}
+            BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
+            BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
+            BOT_USERNAME: op://Kubernetes/github-bot/BOT_USERNAME
 
         - name: Generate Token
           uses: actions/create-github-app-token@v1
