--- a/.github/workflows/nas-restart.yaml
+++ b/.github/workflows/nas-restart.yaml
@@ -16,13 +16,14 @@
           cluster: ["main", "utility"]
       steps:
         - name: Get Secrets
-          uses: bitwarden/sm-action@v2
+          uses: 1password/load-secrets-action@v2
           with:
-            access_token: ${{ secrets.BW_ACCESS_TOKEN }}
-            secrets: |
-              1c493889-1e30-4156-a937-b10100433300 > KUBECONFIG
-              e062dcb9-8cd7-471e-b9be-b10100497102 > BOT_APP_ID
-              5856238d-3fae-4a0f-9847-b1010049f697 > BOT_APP_PRIVATE_KEY
+            export-env: true
+          env:
+            OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.ONEPASS_SA_TOKEN }}
+            BOT_APP_ID: op://Kubernetes/github-bot/BOT_APP_ID
+            BOT_APP_PRIVATE_KEY: op://Kubernetes/github-bot/BOT_APP_PRIVATE_KEY
+            KUBECONFIG: op://Kubernetes/kubernetes/KUBECONFIG_BASE4
 
         - name: Generate Token
           uses: actions/create-github-app-token@v1
